event spacing issue fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1660,7 +1660,7 @@ $border-default: 1px solid #ccc;
   width: 110px;
   border-right: solid 1px #dadada;
   text-align: center;
-  padding: 24px;
+  padding: 27px 24px;
   line-height: 24px; }
   .list.lists-events .date-block span {
     font-size: 14px;
