--- a/src/sass/components/_lists.scss
+++ b/src/sass/components/_lists.scss
@@ -51,7 +51,7 @@
     width: 110px;
     border-right: solid 1px #dadada;
     text-align: center;
-    padding: 24px;
+    padding: 27px 24px;
     line-height: 24px;
     span {
       @include font-size(14px);
